set(MAIN_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

function(CGB_ADD_DEFINITIONS tgt)
target_compile_definitions(${tgt} PRIVATE IS_DEBUG=$<BOOL:$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>>)
target_include_directories(${tgt} PRIVATE ${MAIN_SOURCE_DIR})

if (MSVC)
    message(STATUS "Target ${tgt} config ${CMAKE_BUILD_TYPE}")
    target_compile_options(${tgt} PRIVATE /W4 /WX)
    target_compile_options(${tgt} PRIVATE /Fa)
    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        message(STATUS "Using Clang-Cl flags for target ${tgt}")
        target_compile_options(${tgt} PRIVATE /MD /clang:-Wconversion /clang:-Wno-error=unknown-attributes /clang:-Wno-ambiguous-reversed-operator /clang:-Wno-invalid-offsetof /clang:-march=native)
        target_compile_options(${tgt} PRIVATE $<$<CONFIG:Release>:/clang:-O3 /clang:-flto>)
    else()
        message(STATUS "Using MSVC flags for target ${tgt}")
        target_compile_options(${tgt} PRIVATE /arch:AVX2 /wd5030)
    endif()
else()
    target_compile_options(${tgt} PRIVATE -Wall -Wextra -Werror -Wno-error=unknown-attributes -Wno-ambiguous-reversed-operator)
    message(STATUS "Using GNU flags for target ${tgt}")
endif()

endfunction()

add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(frontend)
